--- a/src/main/resources/UI/JavaFX/launcherUI_javafx.fxml
+++ b/src/main/resources/UI/JavaFX/launcherUI_javafx.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.input.*?>
 <?import org.fxmisc.richtext.*?>
 <?import javafx.scene.web.*?>
@@ -15,23 +16,12 @@
     <children>
         <Pane fx:id="infoPane" layoutX="730.0" layoutY="61.0" prefHeight="720.0" prefWidth="255.0" style="-fx-background-color:rgb(230,230,230)">
             <children>
-                <ComboBox fx:id="gameVersionChooser" layoutX="14.0" layoutY="80.0" onAction="#changeGameVersion" prefHeight="31.0" prefWidth="169.0" />
-                <Label fx:id="gameVersion" alignment="CENTER" layoutX="84.0" layoutY="133.0" prefHeight="24.0" prefWidth="162.0" text="未知" textAlignment="CENTER">
+                <Label fx:id="playerNameLabel" alignment="CENTER" layoutX="14.0" layoutY="265.0" prefHeight="24.0" prefWidth="80.0" text="玩家名：" textAlignment="CENTER">
                     <font>
                         <Font name="DengXian Regular" size="20.0" />
                     </font>
                 </Label>
-                <Label fx:id="gameVersionLabel" alignment="CENTER" layoutX="14.0" layoutY="133.0" prefHeight="24.0" prefWidth="70.0" text="版本：" textAlignment="CENTER">
-                    <font>
-                        <Font name="DengXian Regular" size="20.0" />
-                    </font>
-                </Label>
-                <Label fx:id="playerNameLabel" alignment="CENTER" layoutX="9.0" layoutY="208.0" prefHeight="24.0" prefWidth="80.0" text="玩家名：" textAlignment="CENTER">
-                    <font>
-                        <Font name="DengXian Regular" size="20.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="playerName" layoutX="93.0" layoutY="199.0" prefHeight="42.0" prefWidth="145.0">
+                <TextField fx:id="playerName" layoutX="91.0" layoutY="256.0" prefHeight="42.0" prefWidth="145.0">
                     <font>
                         <Font size="19.0" />
                     </font>
@@ -41,12 +31,6 @@
                         <Font name="DengXian Regular" size="19.0" />
                     </font>
                 </Button>
-                <Label fx:id="gamePathLabel" alignment="CENTER" layoutX="14.0" layoutY="169.0" prefHeight="24.0" prefWidth="70.0" text="路径：" textAlignment="CENTER">
-                    <font>
-                        <Font name="DengXian Regular" size="20.0" />
-                    </font>
-                </Label>
-                <Hyperlink fx:id="gamePathLink" layoutX="108.0" layoutY="159.0" onAction="#linkFire" prefHeight="45.0" prefWidth="115.0" text="未知" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS" />
             <Label fx:id="rootDirLabel" layoutX="14.0" layoutY="14.0" text="根路径：">
                <font>
                   <Font name="DengXian Regular" size="20.0" />
@@ -57,6 +41,26 @@
                   <Font name="DengXian Regular" size="19.0" />
                </font>
             </Button>
+            <AnchorPane layoutX="10.0" layoutY="79.0" prefHeight="100.0" prefWidth="235.0" style="-fx-background-color: #7b8b83; -fx-background-radius: 20px;">
+               <children>
+                  <ImageView fx:id="versionImage" fitHeight="60.0" fitWidth="60.0" layoutX="15.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@imgs/iron_sword.png" />
+                     </image>
+                  </ImageView>
+                  <Label fx:id="gameVersion" layoutX="85.0" layoutY="14.0" text="1.7.10">
+                     <font>
+                        <Font name="DengXian Bold" size="24.0" />
+                     </font>
+                  </Label>
+                  <Circle fx:id="unfoldButton" fill="#737b83" layoutX="209.0" layoutY="46.0" onMouseClicked="#changeVersion" radius="12.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+                  <Hyperlink fx:id="gamePathLink" layoutX="75.0" layoutY="58.0" text="D:\.minecraft" textFill="#725c5c">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                  </Hyperlink>
+               </children>
+            </AnchorPane>
             </children>
         </Pane>
         <WebView fx:id="browser" layoutX="15.0" layoutY="61.0" prefHeight="345.0" prefWidth="700.0" />
