--- a/src/main/resources/UI/JavaFX/launcherUI_javafx.fxml
+++ b/src/main/resources/UI/JavaFX/launcherUI_javafx.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import org.controlsfx.control.tableview2.*?>
+<?import org.controlsfx.control.*?>
+<?import com.sun.javafx.charts.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.input.*?>
 <?import org.fxmisc.richtext.*?>
@@ -14,19 +17,19 @@
 
 <AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.MQ.UI.JavaFX.launcherUI_Controller">
     <children>
-        <Pane fx:id="infoPane" layoutX="730.0" layoutY="61.0" prefHeight="720.0" prefWidth="255.0" style="-fx-background-color:rgb(230,230,230)">
+        <Pane fx:id="infoPane" layoutX="730.0" layoutY="436.0" prefHeight="345.0" prefWidth="255.0" style="-fx-background-color:rgb(230,230,230)">
             <children>
-                <Label fx:id="playerNameLabel" alignment="CENTER" layoutX="14.0" layoutY="265.0" prefHeight="24.0" prefWidth="80.0" text="玩家名：" textAlignment="CENTER">
+                <Label fx:id="playerNameLabel" alignment="CENTER" layoutX="14.0" layoutY="207.0" prefHeight="24.0" prefWidth="80.0" text="玩家名：" textAlignment="CENTER">
                     <font>
                         <Font name="DengXian Regular" size="20.0" />
                     </font>
                 </Label>
-                <TextField fx:id="playerName" layoutX="91.0" layoutY="256.0" prefHeight="42.0" prefWidth="145.0">
+                <TextField fx:id="playerName" layoutX="91.0" layoutY="198.0" prefHeight="42.0" prefWidth="145.0">
                     <font>
                         <Font size="19.0" />
                     </font>
                 </TextField>
-                <Button fx:id="launchButton" layoutX="143.0" layoutY="651.0" mnemonicParsing="false" onAction="#launchGame" prefHeight="48.0" prefWidth="103.0" stylesheets="@button.css" text="启动" textAlignment="CENTER">
+                <Button fx:id="launchButton" layoutX="133.0" layoutY="268.0" mnemonicParsing="false" onAction="#launchGame" prefHeight="48.0" prefWidth="103.0" stylesheets="@button.css" text="启动" textAlignment="CENTER">
                     <font>
                         <Font name="DengXian Regular" size="19.0" />
                     </font>
@@ -85,5 +88,14 @@
           </Menu>
         </menus>
       </MenuBar>
+      <TabPane fx:id="topPane" layoutX="14.0" layoutY="61.0" prefHeight="350.0" prefWidth="971.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab fx:id="setTab" text="高级设置">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="292.0" prefWidth="961.0" />
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
     </children>
 </AnchorPane>
