--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
@@ -33,50 +33,128 @@
 -->
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" style="-fx-border-radius: 10px 10px 0px 0px;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.launcherUI_JavaFX_Controller">
-  <children>
-      <Pane prefHeight="26.0" prefWidth="900.0">
-         <children>
-            <Label layoutX="423.0" layoutY="3.0" text="Sparrow">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="false" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
+<VBox prefHeight="600.0" prefWidth="900.0" style="-fx-border-radius: 10px 10px 0px 0px;" stylesheets="@bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.launcherUI_JavaFX_Controller">
+    <children>
+        <Pane prefHeight="26.0" prefWidth="900.0">
+            <children>
+                <Label layoutX="423.0" layoutY="3.0" text="Sparrow">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+            <ImageView fx:id="closeButton" fitHeight="15.0" fitWidth="15.0" layoutX="880.0" layoutY="6.0" onMouseClicked="#closeWindow" onMouseEntered="#windowButtonActive" onMouseExited="#windowButtonCancel" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@imgs/WindowCloseButton.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="minisizeButton" fitHeight="15.0" fitWidth="15.0" layoutX="855.0" layoutY="6.0" onMouseClicked="#minsizeWindow" onMouseEntered="#windowButtonActive" onMouseExited="#windowButtonCancel" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@imgs/WindowMinsizeButton.png" />
+               </image>
+            </ImageView>
+            </children>
+        </Pane>
+        <SplitPane dividerPositions="0.25, 0.75" VBox.vgrow="ALWAYS">
             <ListView fx:id="versionList" prefHeight="200.0" prefWidth="200.0" />
-      <AnchorPane id="Content" fx:id="launchPane" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0" />
-            <ListView fx:id="versionSummary" prefHeight="200.0" prefWidth="200.0" />
-      </items>
-    </SplitPane>
-    <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
-      <children>
-        <Label fx:id="State" maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="待命。" HBox.hgrow="ALWAYS">
-          <font>
-            <Font size="11.0" fx:id="x3" />
-          </font>
-          <textFill>
-            <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
-          </textFill>
-        </Label>
-        <Pane prefWidth="652.0" HBox.hgrow="ALWAYS" />
-        <Label fx:id="Version" font="$x3" maxWidth="-1.0" text="Sparrow Beta-0.1.0" textFill="$x4" HBox.hgrow="NEVER" />
-      </children>
-      <padding>
-        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-      </padding>
-    </HBox>
-  </children>
+            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
+            <children>
+               <Pane fx:id="launchPane" layoutY="4.0" prefHeight="551.0" prefWidth="441.0">
+                  <children>
+                     <BorderPane fx:id="launchButton" layoutX="277.0" layoutY="487.0" onMouseClicked="#launch" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #5cb85c; -fx-background-radius: 10px;">
+                        <top>
+                           <Label text="启动游戏" textFill="WHITE" BorderPane.alignment="CENTER">
+                              <font>
+                                 <Font name="Microsoft YaHei" size="16.0" />
+                              </font>
+                           </Label>
+                        </top>
+                        <center>
+                           <Label fx:id="versionText" textFill="WHITE" BorderPane.alignment="CENTER">
+                              <font>
+                                 <Font name="Microsoft YaHei" size="15.0" />
+                              </font>
+                           </Label>
+                        </center>
+                     </BorderPane>
+                  </children>
+               </Pane>
+            </children></AnchorPane>
+            <TabPane fx:id="versionSummary" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+                <Tab text="游戏文件">
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <VBox layoutX="10.0" layoutY="7.0" prefHeight="500.0" prefWidth="200.0">
+                            <opaqueInsets>
+                                <Insets />
+                            </opaqueInsets>
+                     <children>
+                        <Accordion>
+                          <panes>
+                            <TitledPane animated="false" text="存档">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <ListView fx:id="gameSaves" layoutX="-1.0" prefHeight="180.0" prefWidth="200.0" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </TitledPane>
+                            <TitledPane animated="false" text="模组">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <ListView fx:id="gameMods" layoutX="14.0" layoutY="13.0" prefHeight="155.0" prefWidth="170.0" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </TitledPane>
+                            <TitledPane animated="false" text="资源包">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <ListView fx:id="gameResPacks" layoutX="14.0" layoutY="13.0" prefHeight="155.0" prefWidth="170.0" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </TitledPane>
+                          </panes>
+                        </Accordion>
+                     </children>
+                        </VBox>
+                    </AnchorPane>
+                </Tab>
+            </TabPane>
+        </SplitPane>
+        <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
+            <padding>
+                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+            </padding>
+            <Label fx:id="State" maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="待命。" HBox.hgrow="ALWAYS">
+                <font>
+                    <Font size="11.0" fx:id="x3" />
+                </font>
+                <textFill>
+                    <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
+                </textFill>
+            </Label>
+            <Pane prefWidth="652.0" HBox.hgrow="ALWAYS" />
+            <Label fx:id="Version" font="$x3" maxWidth="-1.0" text="Sparrow Beta-0.1.0" textFill="$x4" HBox.hgrow="NEVER" />
+        </HBox>
+    </children>
 </VBox>
