--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
@@ -12,8 +12,8 @@
 
 <AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.launcherUI_JavaFX_controlFrame_Controller">
    <children>
-      <JFXComboBox fx:id="characterChooser" layoutX="84.0" layoutY="14.0" prefHeight="25.0" prefWidth="130.0" />
-      <ImageView fx:id="headTexture" fitHeight="60.0" fitWidth="60.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <JFXComboBox fx:id="characterChooser" layoutX="84.0" layoutY="14.0" onAction="#flushImage" prefHeight="25.0" prefWidth="130.0" />
+      <ImageView fx:id="headTexture" fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       <Separator layoutX="10.0" layoutY="94.0" prefWidth="200.0" />
       <Pane layoutX="10.0" layoutY="103.0" prefHeight="85.0" prefWidth="200.0">
          <children>
@@ -32,8 +32,9 @@
                   <Font name="DengXian Regular" size="10.0" />
                </font>
             </Label>
-            <Button fx:id="mcVersionChooseButton" layoutX="158.0" layoutY="50.0" mnemonicParsing="false" onAction="#gotoVersionList" text="→" />
+            <JFXButton fx:id="mcVersionChooseButton" buttonType="RAISED" layoutX="150.0" layoutY="48.0" onAction="#gotoVersionList" text="→" />
          </children>
       </Pane>
+      <JFXButton buttonType="RAISED" layoutX="84.0" layoutY="58.0" onAction="#gotoUserCreator" text="＋" />
    </children>
 </AnchorPane>
