--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/userCreator.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/userCreator.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.launcherUI_JavaFX_userCreator_Controller">
+<AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_userCreator_Controller">
    <children>
       <HBox layoutX="21.0" layoutY="14.0" prefHeight="30.0" prefWidth="180.0">
          <children>
