--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.launcherUI_JavaFX_controlFrame_Controller">
+<AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_controlFrame_Controller">
    <children>
       <JFXComboBox fx:id="characterChooser" layoutX="84.0" layoutY="14.0" onAction="#flushImage" prefHeight="25.0" prefWidth="130.0" />
       <ImageView fx:id="headTexture" fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
@@ -29,7 +29,7 @@
             </Label>
             <Label fx:id="gameCotitle" layoutX="69.0" layoutY="43.0" prefHeight="18.0" prefWidth="85.0" text="待选择" textFill="#7c7b7b">
                <font>
-                  <Font name="DengXian Regular" size="10.0" />
+                  <Font name="Calibri" size="12.0" />
                </font>
             </Label>
             <JFXButton fx:id="mcVersionChooseButton" buttonType="RAISED" layoutX="150.0" layoutY="48.0" onAction="#gotoVersionList" text="→" />
