--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,29 +13,36 @@
 
 <AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_controlFrame_Controller">
    <children>
-      <JFXComboBox fx:id="characterChooser" layoutX="84.0" layoutY="14.0" onAction="#flushImage" prefHeight="25.0" prefWidth="130.0" />
-      <ImageView fx:id="headTexture" fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <Separator layoutX="10.0" layoutY="94.0" prefWidth="200.0" />
-      <Pane layoutX="10.0" layoutY="103.0" prefHeight="85.0" prefWidth="200.0">
+      <Separator layoutX="10.0" layoutY="128.0" prefWidth="200.0" />
+      <Pane layoutX="10.0" layoutY="157.0" prefHeight="170.0" prefWidth="200.0" style="-fx-background-color: rgb(233,233,233); -fx-background-radius: 10px;">
          <children>
-            <ImageView fx:id="gameIcon" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="gameIcon" fitHeight="100.0" fitWidth="100.0" layoutX="50.0" layoutY="14.0" onMouseClicked="#gotoVersionList" onMouseEntered="#mcIconEnter" onMouseExited="#mcIconExit" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@imgs/mc_icon.png" />
                </image>
             </ImageView>
-            <Label fx:id="gameVersion" layoutX="69.0" layoutY="16.0" prefHeight="23.0" prefWidth="130.0" text="待选择">
+            <Label fx:id="gameVersion" alignment="CENTER" layoutX="35.0" layoutY="114.0" prefHeight="23.0" prefWidth="130.0" text="待选择" textAlignment="CENTER">
                <font>
-                  <Font name="Microsoft YaHei" size="16.0" />
+                  <Font name="Microsoft YaHei Bold" size="17.0" />
                </font>
             </Label>
-            <Label fx:id="gameCotitle" layoutX="69.0" layoutY="43.0" prefHeight="18.0" prefWidth="85.0" text="待选择" textFill="#7c7b7b">
+            <Label fx:id="gameCotitle" alignment="CENTER" layoutX="58.0" layoutY="137.0" prefHeight="18.0" prefWidth="85.0" text="待选择" textFill="#7c7b7b">
                <font>
                   <Font name="Calibri" size="12.0" />
                </font>
             </Label>
-            <JFXButton fx:id="mcVersionChooseButton" buttonType="RAISED" layoutX="150.0" layoutY="48.0" onAction="#gotoVersionList" text="→" />
          </children>
       </Pane>
-      <JFXButton buttonType="RAISED" layoutX="84.0" layoutY="58.0" onAction="#gotoUserCreator" text="＋" />
+      <Pane layoutX="10.0" layoutY="14.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: rgb(233,233,233); -fx-background-radius: 10px;">
+         <children>
+            <JFXComboBox fx:id="characterChooser" layoutX="10.0" layoutY="57.0" onAction="#flushImage" prefHeight="25.0" prefWidth="130.0" />
+            <ImageView fx:id="headTexture" fitHeight="50.0" fitWidth="50.0" layoutX="50.0" pickOnBounds="true" preserveRatio="true" />
+            <JFXButton buttonType="RAISED" layoutX="151.0" layoutY="57.0" onAction="#gotoUserCreator" text="＋">
+               <tooltip>
+                  <Tooltip text="添加账户" />
+               </tooltip>
+            </JFXButton>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
