--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
@@ -34,14 +34,11 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
-<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -52,21 +49,21 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="625.0" prefWidth="900.0" style="-fx-border-radius: 10px 10px 0px 0px;" stylesheets="@bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_Controller">
+<VBox prefHeight="625.0" prefWidth="700.0" style="-fx-border-radius: 10px 10px 0px 0px;" stylesheets="@bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_Controller">
     <children>
         <Pane prefHeight="45.0" prefWidth="900.0" style="-fx-background-color: #CFF1FF;">
             <children>
-                <Label alignment="CENTER" layoutX="406.0" layoutY="9.0" text="Sparrow" textAlignment="CENTER">
+                <Label alignment="CENTER" layoutX="306.0" layoutY="7.0" text="Sparrow" textAlignment="CENTER">
                     <font>
                         <Font name="Calibri" size="26.0" />
                     </font>
                 </Label>
-                <ImageView fx:id="closeButton" fitHeight="15.0" fitWidth="15.0" layoutX="880.0" layoutY="6.0" onMouseClicked="#closeWindow" onMouseEntered="#windowButtonActive" onMouseExited="#windowButtonCancel" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="closeButton" fitHeight="15.0" fitWidth="15.0" layoutX="671.0" layoutY="15.0" onMouseClicked="#closeWindow" onMouseEntered="#windowButtonActive" onMouseExited="#windowButtonCancel" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@imgs/WindowCloseButton.png" />
                     </image>
                 </ImageView>
-                <ImageView fx:id="minisizeButton" fitHeight="15.0" fitWidth="15.0" layoutX="855.0" layoutY="6.0" onMouseClicked="#minsizeWindow" onMouseEntered="#windowButtonActive" onMouseExited="#windowButtonCancel" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="minisizeButton" fitHeight="15.0" fitWidth="15.0" layoutX="646.0" layoutY="15.0" onMouseClicked="#minsizeWindow" onMouseEntered="#windowButtonActive" onMouseExited="#windowButtonCancel" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@imgs/WindowMinsizeButton.png" />
                     </image>
@@ -79,56 +76,51 @@
             </Pane>
             </children>
         </Pane>
-        <SplitPane dividerPositions="0.25, 0.75" VBox.vgrow="ALWAYS">
-         <Pane fx:id="pagePane" prefHeight="200.0" prefWidth="220.0" style="-fx-background-color: #CFF1FF;" />
-              <Pane fx:id="launchPane" prefHeight="551.0" prefWidth="441.0" style="-fx-background-color: #CFF1FF;">
-                  <children>
-               <Pane layoutX="14.0" layoutY="14.0" prefHeight="300.0" prefWidth="413.0" style="-fx-background-color: #88A6B3; -fx-background-radius: 10px;">
-                  <children>
-                     <ProgressBar fx:id="launchProcess" layoutX="14.0" layoutY="14.0" prefHeight="18.0" prefWidth="386.0" progress="0.0" />
-                     <JFXTextArea fx:id="launchLog" editable="false" layoutX="14.0" layoutY="43.0" prefHeight="200.0" prefWidth="386.0" />
-                     <JFXButton buttonType="RAISED" layoutX="299.0" layoutY="256.0" onAction="#launch" prefHeight="30.0" prefWidth="100.0" ripplerFill="#cff1ff" text="启动游戏" />
-                  </children>
-               </Pane>
-                  </children>
-              </Pane>
-            <TabPane fx:id="versionSummary" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-                <Tab text="游戏文件">
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                        <VBox layoutX="10.0" layoutY="7.0" prefHeight="500.0" prefWidth="200.0" spacing="20.0">
-                            <opaqueInsets>
-                                <Insets />
-                            </opaqueInsets>
-                            <children>
-                                  <TitledPane animated="false" text="存档">
-                                      <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                              <children>
-                                                  <JFXListView fx:id="gameSaves" layoutX="-1.0" prefHeight="180.0" prefWidth="200.0" style="-fx-fixed-cell-size: 70px;" />
-                                              </children>
-                                          </AnchorPane>
-                                      </content>
-                                  </TitledPane>
-                                  <TitledPane animated="false" text="模组">
-                                      <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                              <children>
-                                                  <JFXListView fx:id="gameMods" layoutX="-1.0" prefHeight="180.0" prefWidth="200.0" />
-                                              </children>
-                                          </AnchorPane>
-                                      </content>
-                                  </TitledPane>
-                            </children>
-                        </VBox>
-                    </AnchorPane>
-                </Tab>
-            </TabPane>
-        </SplitPane>
-        <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
+      <Pane prefHeight="555.0" prefWidth="700.0" style="-fx-background-color: #CFF1FF;">
+         <children>
+            <Pane fx:id="pagePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="220.0" style="-fx-background-color: #CFF1FF;" />
+                 <Pane fx:id="launchPane" layoutX="230.0" prefHeight="555.0" prefWidth="470.0" style="-fx-background-color: #CFF1FF;">
+                     <children>
+                  <JFXButton buttonType="RAISED" layoutX="327.0" layoutY="513.0" onAction="#launch" prefHeight="30.0" prefWidth="100.0" ripplerFill="#cff1ff" text="启动游戏" />
+                  <ScrollPane layoutX="25.0" layoutY="227.0" prefHeight="188.0" prefWidth="420.0" style="-fx-background-color: #88A6B3; -fx-hbar-policy: NEVER; -fx-background-radius: 10px; -fx-border-radius: 10px;">
+                     <content>
+                              <VBox prefHeight="500.0" prefWidth="420.0" spacing="20.0">
+                                  <opaqueInsets>
+                                      <Insets />
+                                  </opaqueInsets>
+                                  <children>
+                                        <TitledPane animated="false" prefWidth="420.0" text="存档">
+                                            <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="420.0">
+                                                    <children>
+                                                        <JFXListView fx:id="gameSaves" layoutX="-1.0" prefWidth="420.0" style="-fx-fixed-cell-size: 70px;" />
+                                                    </children>
+                                                </AnchorPane>
+                                            </content>
+                                        </TitledPane>
+                                        <TitledPane animated="false" prefWidth="420.0" text="模组">
+                                            <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="420.0">
+                                                    <children>
+                                                        <JFXListView fx:id="gameMods" layoutX="-1.0" prefWidth="420.0" />
+                                                    </children>
+                                                </AnchorPane>
+                                            </content>
+                                        </TitledPane>
+                                  </children>
+                              </VBox>
+                     </content>
+                  </ScrollPane>
+                     </children>
+                 </Pane>
+            <Separator layoutX="215.0" layoutY="8.0" orientation="VERTICAL" prefHeight="540.0" prefWidth="10.0" />
+         </children>
+      </Pane>
+        <HBox id="HBox" alignment="CENTER_LEFT" prefHeight="20.0" spacing="5.0" VBox.vgrow="NEVER">
             <padding>
                 <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
             </padding>
-            <Label fx:id="State" maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="待命。" HBox.hgrow="ALWAYS">
+            <Label fx:id="State" maxHeight="1.7976931348623157E308" maxWidth="-1.0" prefHeight="15.0" prefWidth="250.0" text="待命。" HBox.hgrow="ALWAYS">
                 <font>
                     <Font size="11.0" fx:id="x3" />
                 </font>
@@ -136,8 +128,8 @@
                     <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
                 </textFill>
             </Label>
-            <Pane prefWidth="652.0" HBox.hgrow="ALWAYS" />
-            <Label fx:id="Version" font="$x3" maxWidth="-1.0" text="Sparrow Alpha-0.4.0" textFill="$x4" HBox.hgrow="NEVER" />
+            <Pane prefHeight="15.0" prefWidth="500.0" HBox.hgrow="ALWAYS" />
+            <Label fx:id="Version" font="$x3" maxWidth="-1.0" prefHeight="15.0" prefWidth="206.0" text="Sparrow Alpha-0.4.0" textFill="$x4" HBox.hgrow="NEVER" />
         </HBox>
     </children>
 </VBox>
