--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/versionlistFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/versionlistFrame.fxml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXListView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_versionList_Controller">
    <children>
-      <JFXListView fx:id="versionList" prefHeight="555.0" prefWidth="220.0" style="-fx-fixed-cell-size: 55px;" />
+      <JFXListView fx:id="versionList" prefHeight="250.0" prefWidth="220.0" style="-fx-fixed-cell-size: 55px;" />
+      <Pane fx:id="infoPane" layoutX="10.0" layoutY="256.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: rgb(233,233,233); -fx-background-radius: 10px;">
+         <children>
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@imgs/mc_icon.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="versionNameLabel" alignment="CENTER" layoutX="70.0" layoutY="13.0" prefHeight="24.0" prefWidth="130.0" text="待选择">
+               <font>
+                  <Font name="Microsoft YaHei Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="versionTypeLabel" alignment="CENTER" layoutX="85.0" layoutY="43.0" prefHeight="15.0" prefWidth="100.0" text="待选择" textFill="#7c7c7c" />
+            <Label fx:id="modInfoLabel" layoutX="76.0" layoutY="68.0" prefHeight="15.0" prefWidth="120.0" text="待选择" />
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
