--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
@@ -11,6 +11,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<!--
+  ~ Copyright (c) 2021 Sparrow All Rights Reserved.
+  ~ FileName: controlFrame.fxml
+  ~ @author: 1662423349@qq.com
+  ~ @date: 2021/6/12 下午9:17
+  ~ @version: 1.0
+  -->
+
 <AnchorPane prefHeight="555.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_controlFrame_Controller">
    <children>
       <Separator layoutX="10.0" layoutY="128.0" prefWidth="200.0" />
